kubernetes/argo-cd/projects/nebius/production-hm/opencost/environments/production/kubernetes-manifests/hm-opencost-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hm-opencost-ingress
  namespace: production-hm-opencost
  annotations:
    kubernetes.io/ingress.class: traefik
    # https://doc.traefik.io/traefik/reference/routing-configuration/kubernetes/ingress/#on-ingress
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    # https://kubernetes-sigs.github.io/external-dns/latest/docs/annotations/annotations
    external-dns.alpha.kubernetes.io/hostname: opencost.hongbomiao.com
  labels:
    app.kubernetes.io/name: hm-opencost
    app.kubernetes.io/part-of: production-hm-opencost
spec:
  rules:
    - host: opencost.hongbomiao.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: opencost
                port:
                  number: 9090
  tls:
    - hosts:
        - opencost.hongbomiao.com
      secretName: hm-opencost-certificate
